fix: format css

--- a/content/game1/nevel-difficult.html
+++ b/content/game1/nevel-difficult.html
@@ -44,7 +44,7 @@
             <input type="text" class="input-answer" id="answer-input5">
         </div>
         <div class="container-button">
-            <button id="button-submit" class="button-answer">Enviar</button>
+            <button id="button-submit" class="button button-answer">Enviar</button>
         </div>
     </div>
 </body>
