--- a/content/game1/nevel-normal.html
+++ b/content/game1/nevel-normal.html
@@ -41,7 +41,7 @@
         </div>
 
         <div class="container-button">
-            <button id="button-submit" class="button-answer">Enviar</button>
+            <button id="button-submit" class="button button-answer">Enviar</button>
         </div>
     </div>
     
