--- a/content/game3.html
+++ b/content/game3.html
@@ -18,7 +18,7 @@
         <img class="img-inferior" src="../img/img-game3/pregunta.png" alt="Pregunta"> 
         <img class="img-inferior2" src="../img/img-game3/oms.png" alt="Pensar"> 
         <p class="paragraph-tip" id="tip">El numero esta entre el 0 y 100</p>
-        <button id="submit" class="button-submit">Enviar</button>
+        <button id="submit" class="button-submit button">Enviar</button>
 
         <h3 class="subtitle-try">intentos:</h3>
         <span class="number-try" id="tryNumber">0</span>
