--- a/content/game1/nevel-easy.html
+++ b/content/game1/nevel-easy.html
@@ -36,7 +36,7 @@
             <input type="text" class="input-answer" id="answer-input3">
         </div>
         <div class="container-button">
-            <button id="button-submit" class="button-answer">Enviar</button>
+            <button id="button-submit" class="button button-answer">Enviar</button>
         </div>
     </div>
     
