--- a/content/game1.html
+++ b/content/game1.html
@@ -14,7 +14,7 @@
         <div class="button-nevel">
             <a href="../content/game1/nevel-easy.html" class="button-level__link">
                 <p>3 Elementos</p>
-                <p>Facil</p>
+                <p>Fácil</p>
             </a>
         </div>
         <div class="button-nevel">
