--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Seleccionar 3 juegos entre Piedra, papel, tijera. Adivina el numero. Memorizar">
+    <meta name="description" content="Seleccionar 3 juegos entre Piedra, papel, tijera. Adivina el número. Memorizar">
     <link rel="stylesheet" href="style/index.css">
     <link rel="stylesheet" href="style/style.css">
     <title>3-game - Inicio</title>
@@ -29,7 +29,7 @@
             </div>
             <div class="bg">
                 <a class="link-game" href="content/game3.html">
-                    <h2 class="card-title">Adivina el numero</h2>
+                    <h2 class="card-title">Adivina el número</h2>
                 </a>
             </div>
         </div>
