--- a/content/game1/nevel-difficult.html
+++ b/content/game1/nevel-difficult.html
@@ -14,23 +14,23 @@
         <p id="timer">10</p>
     </div>
 
-    <h2 class="title" id="title-remember-image">Recordar las siquiente imagenes y su posicion</h2>
+    <h2 class="title" id="title-remember-image">Recordar las siquiente imagenes y su posición</h2>
     
     <div class="container-image">
-        <h3 class="title">Posicion 1</h3>
+        <h3 class="title">posición 1</h3>
         <img src="../../img/img-game1/zombie-1.png" alt="" class="container-image__image" id="image-zombie1">
-        <h3 class="title">Posicion 2</h3>
+        <h3 class="title">posición 2</h3>
         <img src="../../img/img-game1/zombie-2.png" alt="" class="container-image__image" id="image-zombie2">
-        <h3 class="title">Posicion 3</h3>
+        <h3 class="title">posición 3</h3>
         <img src="../../img/img-game1/zombie-3.png" alt="" class="container-image__image" id="image-zombie3">
-        <h3 class="title">Posicion 4</h3>
+        <h3 class="title">posición 4</h3>
         <img src="../../img/img-game1/zombie-4.png" alt="" class="container-image__image" id="image-zombie4">
-        <h3 class="title">Posicion 5</h3>
+        <h3 class="title">posición 5</h3>
         <img src="../../img/img-game1/zombie-5.png" alt="" class="container-image__image" id="image-zombie5">
     </div>
 
     <div class="answer">
-        <h3 class="title">Ingrese la posicion de cada imagen</h3>
+        <h3 class="title">Ingrese la posición de cada imagen</h3>
         <div class="container-image-show">
             <img src="../../img/img-game1/zombie-1.png" alt="iconos de zombie">
             <input type="text" class="input-answer" id="answer-input1">
