--- a/content/game1/nevel-easy.html
+++ b/content/game1/nevel-easy.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../../style/style.css">
     <link rel="stylesheet" href="../../style/game1.css">
     <script type="module" src="../../js/game1/nevel-easy.js"></script>
-    <title>Nivel facil</title>
+    <title>Nivel Fácil</title>
 </head>
 <body>
     <div class="time-remaining">
