--- a/content/game3.html
+++ b/content/game3.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style/style.css">
     <link rel="stylesheet" href="../style/game3.css">
-    <title>Adivinar el numero</title>
+    <title>Adivinar el número</title>
     <script type="module" src="../js/game3.js"></script>
 </head>
 <body>
         
     <div class="main-container">
         <img class="logo-interrogante" src="../img/img-game3/interrogante.png">
-        <h2 class="titulo">Adivina el numero</h2>
-        <input type="text" placeholder="numero" id="input1" class="input">
+        <h2 class="titulo">Adivina el número</h2>
+        <input type="text" placeholder="número" id="input1" class="input">
         <h3 class="subtitle-tip">Consejos:</h3>
         <img class="img-inferior" src="../img/img-game3/pregunta.png" alt="Pregunta"> 
         <img class="img-inferior2" src="../img/img-game3/oms.png" alt="Pensar"> 
-        <p class="paragraph-tip" id="tip">El numero esta entre el 0 y 100</p>
+        <p class="paragraph-tip" id="tip">El número esta entre el 0 y 100</p>
         <button id="submit" class="button-submit button">Enviar</button>
 
         <h3 class="subtitle-try">intentos:</h3>
