--- a/content/game2.html
+++ b/content/game2.html
@@ -8,11 +8,11 @@
     <title>Piedra, papel o tijera</title>
 </head>
 <body>
-    <div class="Contenedor">
-        <h2 class="titulo">Ingrese su Nombre</h2>
+    <div class="container">
+        <h2 class="title">Ingrese su Nombre</h2>
         <label class="nombre" for="jd">Nombre: </label>
-        <input class="txtnombre" type="text" id="jd">
-        <button class="empezar" onclick="nombres()"> Empezar</button>
+        <input class="input-name" type="text" id="jd">
+        <button class="btn-save" onclick="nombres()"> Guardar</button>
         <br>
         <div class="jugador" id="mostrar"></div>
         <br>
@@ -20,13 +20,13 @@
         <img class="img-izquierda" src="../img/img-game2/foto-costado2.png">
         
     </div>
-    <div class="Contenedor2">
-        <H2 class="titulo2">Juegos</H2>
+    <div class="container-second">
+        <H2 class="title-second">Juegos</H2>
         <br>
         <button class="piedra" onclick="piedra()"></button>
         <button class="papel" onclick="papel()"></button>
         <button class="tijera" onclick="tijera()"></button> 
-        <div class="definir" id="resultado"></div>
+        <div class="definir" id="result"></div>
         <img class="img-fondo" src="../img/img-game2/foto-inferior.png">
     </div>
 
