refactor: name of html

--- a/content/game2.html
+++ b/content/game2.html
@@ -10,14 +10,14 @@
 <body>
     <div class="container">
         <h2 class="title">Ingrese su Nombre</h2>
-        <label class="nombre" for="jd">Nombre: </label>
+        <label class="label-name" for="jd">Nombre: </label>
         <input class="input-name" type="text" id="jd">
         <button class="btn-save" onclick="nombres()"> Guardar</button>
         <br>
-        <div class="jugador" id="mostrar"></div>
+        <div class="player" id="show"></div>
         <br>
-        <img class="img-derecha" src="../img/img-game2/foto-costado1.png">
-        <img class="img-izquierda" src="../img/img-game2/foto-costado2.png">
+        <img class="img-right" src="../img/img-game2/foto-costado1.png">
+        <img class="img-left" src="../img/img-game2/foto-costado2.png">
         
     </div>
     <div class="container-second">
