--- a/content/game2.html
+++ b/content/game2.html
@@ -11,8 +11,8 @@
     <div class="container">
         <h2 class="title">Ingrese su Nombre</h2>
         <label class="label-name" for="jd">Nombre: </label>
-        <input class="input-name" type="text" id="jd">
-        <button class="btn-save" onclick="nombres()"> Guardar</button>
+        <input class="input-name" type="text" id="input-name">
+        <button class="btn-save" onclick="showName()"> Guardar</button>
         <br>
         <div class="player" id="show"></div>
         <br>
@@ -23,7 +23,7 @@
     <div class="container-second">
         <H2 class="title-second">Juegos</H2>
         <br>
-        <button class="piedra" onclick="piedra()"></button>
+        <button class="piedra" onclick="rock()"></button>
         <button class="papel" onclick="papel()"></button>
         <button class="tijera" onclick="tijera()"></button> 
         <div class="definir" id="result"></div>
