refactor: add function showResult in js

--- a/content/game2.html
+++ b/content/game2.html
@@ -23,9 +23,9 @@
     <div class="container-second">
         <H2 class="title-second">Juegos</H2>
         <br>
-        <button class="piedra" onclick="rock()"></button>
-        <button class="papel" onclick="papel()"></button>
-        <button class="tijera" onclick="tijera()"></button> 
+        <button class="piedra" onclick="chooseOption('rock')"></button>
+        <button class="papel" onclick="chooseOption('paper')"></button>
+        <button class="tijera" onclick="chooseOption('scissors')"></button> 
         <div class="definir" id="result"></div>
         <img class="img-fondo" src="../img/img-game2/foto-inferior.png">
     </div>
