--- a/content/game2.html
+++ b/content/game2.html
@@ -23,13 +23,14 @@
     <div class="container-second">
         <H2 class="title-second">Juegos</H2>
         <br>
-        <button class="piedra" onclick="chooseOption('rock')"></button>
-        <button class="papel" onclick="chooseOption('paper')"></button>
-        <button class="tijera" onclick="chooseOption('scissors')"></button> 
-        <div class="definir" id="result"></div>
-        <img class="img-fondo" src="../img/img-game2/foto-inferior.png">
+        <button class="btn-choose piedra" onclick="chooseOption('rock')"></button>
+        <button class="btn-choose papel" onclick="chooseOption('paper')"></button>
+        <button class="btn-choose tijera" onclick="chooseOption('scissors')"></button> 
     </div>
-
+    <div class="definir" id="result"></div>
+    <div class="container-third">
+    <img class="img-fondo" src="../img/img-game2/foto-inferior.png">
+    </div>
     <script src="../js/game2.js"></script>
   
 </body>
