refactor: style and add message in game 1

--- a/content/game1.html
+++ b/content/game1.html
@@ -8,6 +8,10 @@
     <title>Juego de Memoria</title>
 </head>
 <body>
+    <h1 class="title">Juego de memoria</h1>
+    <div class="container">
+        <p class="paragraph">En este juego vas a tener Fácil: 30 segundos, Normal: 20 segundos y Difícil: 10 segundos para memorizar los elementos que aparecen en la pantalla. Al momento de presionar los botones de abajo, empezará a contar en tiempo.</p>
+    </div>
     <h2 class="title">Dificultades</h2>
 
     <main class="main">
