fix: style button

--- a/content/game3.html
+++ b/content/game3.html
@@ -12,13 +12,13 @@
         
     <div class="main-container">
         <img class="logo-question" src="../img/img-game3/interrogante.png">
-        <h2 class="titulo">Adivina el número</h2>
+        <h2 class="main-container__titulo">Adivina el número</h2>
         <div class="center-container">
             <img class="main-container__image" src="../img/img-game3/oms.png" alt="Pensar"> 
             <input type="text" placeholder="número" id="input1" class="input">
             <img class="main-container__image" src="../img/img-game3/pregunta.png" alt="Pregunta"> 
         </div>
-        <button id="submit" class="button-submit button">Enviar</button>
+        <button id="submit" class="button-send">Enviar</button>
         <h3 class="subtitle-tip">Ayuda:</h3>
         <p class="paragraph-tip" id="tip">El número esta entre el 0 y 100</p>
         <h3 class="subtitle-try">intentos:</h3>
