--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <img src="img/almohadilla-de-juego.png" alt="logo">
-        <h2 class="header-title">3 Game</h2>
+        <h2 class="header__title">3 Game</h2>
     </header>
     <main>
         <h1 class="main-title">Selecciona el juego</h1>
