--- a/content/game1/nevel-difficult.html
+++ b/content/game1/nevel-difficult.html
@@ -14,7 +14,7 @@
         <p id="timer">10</p>
     </div>
 
-    <h2 class="title" id="title-remember-image">Recordar las siquiente imagenes y su posición</h2>
+    <h2 class="title title__remember" id="title-remember-image">Recordar las siquiente imagenes y su posición</h2>
     
     <div class="container-image">
         <h3 class="title">posición 1</h3>
