--- a/content/game1/nevel-easy.html
+++ b/content/game1/nevel-easy.html
@@ -14,7 +14,7 @@
         <p id="timer">30</p>
     </div>
 
-    <h2 class="title" id="title-remember-image">Recordar las siquiente imagenes y su posicion</h2>
+    <h2 class="title title__remember" id="title-remember-image">Recordar las siquiente imagenes y su posicion</h2>
 
     <div class="container-image">
         <h3 class="title">Posicion 1</h3>
