refactor: add error message

--- a/content/game2.html
+++ b/content/game2.html
@@ -11,7 +11,8 @@
     <div class="container">
         <h2 class="title">Ingrese su Nombre</h2>
         <label class="label-name" for="jd">Nombre: </label>
-        <input class="input-name" type="text" id="input-name">
+        <span id="error"></span>
+        <input class="input-name" type="text" id="input-name" placeholder="Ingrese su nombre">
         <button class="btn-save" onclick="showName()"> Guardar</button>
         <br>
         <div class="player" id="show"></div>
