--- a/content/game2.html
+++ b/content/game2.html
@@ -17,14 +17,15 @@
             <button class="btn-save" onclick="showName()"> Guardar</button>
         </div>
         <div class="container__center">
-            <img class="img-right" src="../img/img-game2/foto-costado1.png">
+            <img class="container__center-img img-right" src="../img/img-game2/foto-costado1.png">
             <div class="player" id="show"></div>
-            <img class="img-left" src="../img/img-game2/foto-costado2.png">
+            <img class="container__center-img img-left" src="../img/img-game2/foto-costado2.png">
         </div>
     </div>
-    <div class="container-second">
-        <H2 class="title-second">Juegos</H2>
-        <br>
+
+    <H2 class="title-games">Juegos</H2>
+
+    <div class="container-game">
         <button class="btn-choose piedra" onclick="chooseOption('rock')"></button>
         <button class="btn-choose papel" onclick="chooseOption('paper')"></button>
         <button class="btn-choose tijera" onclick="chooseOption('scissors')"></button> 
