refactor: change style of button (game 1)

--- a/content/game1.html
+++ b/content/game1.html
@@ -10,22 +10,25 @@
 <body>
     <h1 class="title">Juego de memoria</h1>
     <div class="container">
-        <p class="paragraph">En este juego vas a tener Fácil: 30 segundos, Normal: 20 segundos y Difícil: 10 segundos para memorizar los elementos que aparecen en la pantalla. Al momento de presionar los botones de abajo, empezará a contar el tiempo.</p>
+        <p class="paragraph">En este juego vas a tener algunos <strong>segundos</strong> para memorizar las <strong>imágenes</strong> que aparecen en la pantalla. Al momento de presionar los botones de abajo, empezará a contar el tiempo.</p>
     </div>
     <h2 class="title">Dificultades</h2>
 
     <main class="main">
             <a href="../content/game1/nevel-easy.html" class="button-level__link">
-                <p>3 Elementos</p>
                 <p>Fácil</p>
+                <p>3 Imágenes</p>
+                <p>30 Segundos</p>
             </a>
             <a href="../content/game1/nevel-normal.html" class="button-level__link">
-                <p>4 Elementos</p>
                 <p>Normal</p>
+                <p>4 Imágenes</p>
+                <p>20 Segundos</p>
             </a>
             <a href="../content/game1/nevel-difficult.html" class="button-level__link">
-                <p>5 Elementos</p>
-                <p>Dificil</p>
+                <p>Difícil</p>
+                <p>5 Imágenes</p>
+                <p>10 Segundos</p>
             </a>
     </main>
 </body>
