feat: change path folders

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         <h1 class="main-title">Selecciona el juego</h1>
 
         <div class="card-container">
-            <a class="link-game" href="content/game1.html">
+            <a class="link-game" href="pages/game1/index.html">
                 <h2 class="card-title">Memorizar</h2>
             </a>
-            <a class="link-game" href="content/game2.html">
+            <a class="link-game" href="pages/game2/index.html">
                 <h2 class="card-title">Piedra papel tijera</h2>
             </a>
-            <a class="link-game" href="content/game3.html">
+            <a class="link-game" href="pages/game3/index.html">
                 <h2 class="card-title">Adivina el número</h2>
             </a>
         </div>
