--- a/pages/game1/index.html
+++ b/pages/game1/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style/style.css">
-    <link rel="stylesheet" href="../style/game1.css">
+    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="./style/game1.css">
     <title>Juego de Memoria</title>
 </head>
 <body>
@@ -15,17 +15,17 @@
     <h2 class="title">Dificultades</h2>
 
     <main class="main">
-            <a href="../content/game1/nevel-easy.html" class="button-level__link">
+            <a href="./levels/easy.html" class="button-level__link">
                 <p>Fácil</p>
                 <p>3 Imágenes</p>
                 <p>30 Segundos</p>
             </a>
-            <a href="../content/game1/nevel-normal.html" class="button-level__link">
+            <a href="./levels/normal.html" class="button-level__link">
                 <p>Normal</p>
                 <p>4 Imágenes</p>
                 <p>20 Segundos</p>
             </a>
-            <a href="../content/game1/nevel-difficult.html" class="button-level__link">
+            <a href="./levels/difficult.html" class="button-level__link">
                 <p>Difícil</p>
                 <p>5 Imágenes</p>
                 <p>10 Segundos</p>
