--- a/pages/game2/index.html
+++ b/pages/game2/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style/style.css">
-    <link rel="stylesheet" href="../style/game2.css">
+    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="./style/game2.css">
     <title>Piedra, papel o tijera</title>
 </head>
 <body>
@@ -17,9 +17,9 @@
             <button class="btn-save" onclick="showName()"> Guardar</button>
         </div>
         <div class="container__center">
-            <img class="container__center-img img-right" src="../img/img-game2/foto-costado1.png">
+            <img class="container__center-img img-right" src="./image/foto-costado1.png">
             <div class="player" id="show"></div>
-            <img class="container__center-img img-left" src="../img/img-game2/foto-costado2.png">
+            <img class="container__center-img img-left" src="./image/foto-costado2.png">
         </div>
     </div>
 
@@ -32,9 +32,9 @@
     </div>
     <div class="definir" id="result"></div>
     <div class="container-third">
-    <img class="img-fondo" src="../img/img-game2/foto-inferior.png">
+    <img class="img-fondo" src="./image/foto-inferior.png">
     </div>
-    <script src="../js/game2.js"></script>
+    <script src="./js/game2.js"></script>
   
 </body>
 </html>
