--- a/pages/game1/levels/easy.html
+++ b/pages/game1/levels/easy.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../style/style.css">
-    <link rel="stylesheet" href="../../style/game1.css">
-    <script type="module" src="../../js/game1/nevel-easy.js"></script>
+    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="../style/game1.css">
+    <script type="module" src="../js/level-easy.js"></script>
     <title>Nivel Fácil</title>
 </head>
 <body>
@@ -18,21 +18,21 @@
 
     <div class="container-image">
         <h3 class="title">Posicion 1</h3>
-        <img src="../../img/img-game1/zombie-1.png" alt="" class="container-image__image" id="image-zombie1">
+        <img src="../image/zombie-1.png" alt="" class="container-image__image" id="image-zombie1">
         <h3 class="title">Posicion 2</h3>
-        <img src="../../img/img-game1/zombie-2.png" alt="" class="container-image__image" id="image-zombie2">
+        <img src="../image/zombie-2.png" alt="" class="container-image__image" id="image-zombie2">
         <h3 class="title">Posicion 3</h3>
-        <img src="../../img/img-game1/zombie-3.png" alt="" class="container-image__image" id="image-zombie3">
+        <img src="../image/zombie-3.png" alt="" class="container-image__image" id="image-zombie3">
     </div>
 
     <div class="answer">
         <h3 class="title">Ingrese la posicion de cada imagen</h3>
         <div class="container-image-show">
-            <img src="../../img/img-game1/zombie-1.png" alt="iconos de zombie">
+            <img src="../image/zombie-1.png" alt="iconos de zombie">
             <input type="text" class="input-answer" id="answer-input1">
-            <img src="../../img/img-game1/zombie-2.png" alt="iconos de zombie">
+            <img src="../image/zombie-2.png" alt="iconos de zombie">
             <input type="text" class="input-answer" id="answer-input2">
-            <img src="../../img/img-game1/zombie-3.png" alt="iconos de zombie">
+            <img src="../image/zombie-3.png" alt="iconos de zombie">
             <input type="text" class="input-answer" id="answer-input3">
         </div>
         <div class="container-button">
