--- a/pages/game3/index.html
+++ b/pages/game3/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style/style.css">
-    <link rel="stylesheet" href="../style/game3.css">
+    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="./style/game3.css">
     <title>Adivinar el número</title>
-    <script type="module" src="../js/game3.js"></script>
+    <script type="module" src="./js/game3.js"></script>
 </head>
 <body>
         
     <div class="main-container">
-        <img class="logo-question" src="../img/img-game3/interrogante.png">
+        <img class="logo-question" src="./image/interrogante.png">
         <h2 class="main-container__titulo">Adivina el número</h2>
         <div class="center-container">
-            <img class="main-container__image" src="../img/img-game3/oms.png" alt="Pensar"> 
+            <img class="main-container__image" src="./image/oms.png" alt="Pensar"> 
             <input type="text" placeholder="número" id="input1" class="input">
-            <img class="main-container__image" src="../img/img-game3/pregunta.png" alt="Pregunta"> 
+            <img class="main-container__image" src="./image/pregunta.png" alt="Pregunta"> 
         </div>
         <button id="submit" class="button-send">Enviar</button>
         <h3 class="subtitle-tip">Ayuda:</h3>
