refactor: add favicon

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Seleccionar 3 juegos entre Piedra, papel, tijera. Adivina el número. Memorizar">
     <link rel="stylesheet" href="style/index.css">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="icon" href="./img/almohadilla-de-juego.png" type="image/svg+xml">`
     <title>3-game - Inicio</title>
 </head>
 
